[FIX] sap.m.Select: overflow button hover in TabStripSelect fixed for hcb

--- a/src/themelib_sap_belize/src/sap/m/themes/sap_belize_hcw/Select.less
+++ b/src/themelib_sap_belize/src/sap/m/themes/sap_belize_hcw/Select.less
@@ -157,10 +157,10 @@ html.sap-desktop .sapMSltIconOnly:focus {
 
 /* hover: Select IconOnly in all contexts */
 
-html.sap-desktop .sapMHeader-CTX .sapMSltIconOnly:hover:not(.sapMSltPressed),
-html.sap-desktop .sapMSubHeader-CTX .sapMSltIconOnly:hover:not(.sapMSltPressed),
-html.sap-desktop .sapMFooter-CTX .sapMSltIconOnly:hover:not(.sapMSltPressed),
-html.sap-desktop .sapMSltIconOnly:hover:not(.sapMSltPressed) {
+html.sap-desktop .sapMHeader-CTX .sapMSltIconOnly:hover:not(.sapMSltPressed):not(.sapMTSSlt),
+html.sap-desktop .sapMSubHeader-CTX .sapMSltIconOnly:hover:not(.sapMSltPressed):not(.sapMTSSlt),
+html.sap-desktop .sapMFooter-CTX .sapMSltIconOnly:hover:not(.sapMSltPressed):not(.sapMTSSlt),
+html.sap-desktop .sapMSltIconOnly:hover:not(.sapMSltPressed):not(.sapMTSSlt), {
 	color: @sapUiContentIconColor;
 	background-color: @sapUiButtonLiteHoverBackground;
 }
